--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <!-- <section class="chamada">
-        <div class="chamada-texto">
+        <div class="chamada-texto">dd
             <h1>SATORU GOJO VOLTOU A VIDA? É OFICIAL AGORA? ENTENDA O QUE ESTÁ ACONTECENDO?!!!</h1>
             <p>#JUJUSTU</p>
         </div>
