banner de apresentacao

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Animeflix</title>
 </head>
 
-<body>
-    <nav>
+<body style="background-color: gray;">
+    <nav style="position: fixed; z-index: 3;">
         <header class="bungee-tint-regular title-header">Animeflix</header>
         <div class="search_container">
             <input class="input-header" placeholder="Pesquise.." />
@@ -20,13 +20,13 @@
         </div>
     </nav>
 
-    <!-- <section class="chamada">
-        <div class="chamada-texto">dd
+    <section class="banner">
+        <div class="overlay-banner"></div>
+        <div class="banner-texto">
             <h1>SATORU GOJO VOLTOU A VIDA? É OFICIAL AGORA? ENTENDA O QUE ESTÁ ACONTECENDO?!!!</h1>
-            <p>#JUJUSTU</p>
         </div>
 
-        <div>
+        <div style="z-index: 2;">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ideXN9qYeJ4?si=WPty59ke71r3RD36"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -35,6 +35,20 @@
         </div>
     </section>
 
+    <section class="container">
+        <div class="header-section">
+            <div class="separator"></div>
+            <p>EM ALTA</p>
+        </div>
+
+        <div class="container-cards">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ideXN9qYeJ4?si=WPty59ke71r3RD36"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+<!--
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
