secoes com lista de videos em alta e de outros conteudos

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap" rel="stylesheet">
-    <title>Animeflix</title>
+    <title>Choquei Animes</title>
 </head>
 
-<body style="background-color: gray;">
+<body style="background-color: rgb(32, 32, 32);">
     <nav style="position: fixed; z-index: 3;">
-        <header class="bungee-tint-regular title-header">Animeflix</header>
+        <header class="bungee-tint-regular title-header">Choquei Animes</header>
         <div class="search_container">
             <input class="input-header" placeholder="Pesquise.." />
             <img src="assets/big-search-len.png" height="20" class="icon-search" />
@@ -23,7 +23,8 @@
     <section class="banner">
         <div class="overlay-banner"></div>
         <div class="banner-texto">
-            <h1>SATORU GOJO VOLTOU A VIDA? É OFICIAL AGORA? ENTENDA O QUE ESTÁ ACONTECENDO?!!!</h1>
+            <h1 style="font-size: 40px;">SATORU GOJO VOLTOU A VIDA? É OFICIAL AGORA? ENTENDA O QUE ESTÁ ACONTECENDO?!!!
+            </h1>
         </div>
 
         <div style="z-index: 2;">
@@ -37,39 +38,91 @@
 
     <section class="container">
         <div class="header-section">
-            <div class="separator"></div>
-            <p>EM ALTA</p>
+            <div class="separator" style="background-color: red;"></div>
+            <p class="titulo-header">EM ALTA</p>
         </div>
 
         <div class="container-cards">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ideXN9qYeJ4?si=WPty59ke71r3RD36"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card">
+                <iframe width="450" height="315" src="https://www.youtube.com/embed/sl0Mvq2y3_Q?si=U4KM4wKdU5ByBjxX"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p class="titulo-card">O PIOR CAPÍTULO DE JUJUTSU - Jujutsu Kaisen 268</p>
+                <p class="autor-card">Dias de Nerd</p>
+            </div>
+            <div class="card">
+                <iframe width="450" height="315" src="https://www.youtube.com/embed/y8WjYP4vt3w?si=gkUieT2iiW4m4Af7"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p class="titulo-card">A MORTE DO SUKUNA FOI UMA GRANDE PIADA! A CONCLUSÃO DA BATALHA FINAL EM JUJUTSU
+                    KAISEN 268</p>
+                <p class="autor-card">Bruno Bandeira</p>
+            </div>
+            <div class="card">
+                <iframe width="450" height="315" src="https://www.youtube.com/embed/wmHSSg5vt6U?si=qwfGgYmkCJ13CwCv"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p class="titulo-card">🤯INCRÍVEL: COMO TODOS VÃO VOLTAR A VIDA EM JUJUTSU KAISEN NO FINAL / INCLUSIVE
+                    GOJO</p>
+                <p class="autor-card">To Nerd</p>
+            </div>
+            <div class="card">
+                <iframe width="450" height="315" src="https://www.youtube.com/embed/1BrKSDuyOMo?si=VKnqQZ4KOay0yFaE"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p class="titulo-card">5 MISTÉRIOS QUE PRECISAM SER RESPONDIDOS EM JUJUTSU KAISEN ANTES DO FIM</p>
+                <p class="autor-card">Dias de Nerd</p>
+            </div>
         </div>
     </section>
-<!--
-    <section class="categoria">
-        <h2>Filmes e séries</h2>
-        <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
-            </a>
-        </div>
-    </section> -->
 
+    <section class="container">
+        <div class="header-section">
+            <div class="separator" style="background-color: yellow;"></div>
+            <p class="titulo-header">Outros Animes</p>
+        </div>
+
+        <div class="container-cards">
+            <div class="card">
+                <iframe width="450" height="315" src="https://www.youtube.com/embed/MJ-ZYc3IUBY?si=6zlJzknZB20phDC3"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p class="titulo-card">QUAL A ORDEM CERTA para ASSISTIR DEMON SLAYER? (ORDEM CRONOLÓGICA)</p>
+                <p class="autor-card">Sete</p>
+            </div>
+            <div class="card">
+                <iframe width="450" height="315" src="https://www.youtube.com/embed/cFNp1CaEX0w?si=rXXdpcOU02dARuhK"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p class="titulo-card">ATTACK ON TITAN FINALMENTE ACABOU! VEJA COMO TERMINOU [Shingeki no Kyojin]</p>
+                <p class="autor-card">Ei Nerd</p>
+            </div>
+            <div class="card">
+                <iframe width="450" height="315" src="https://www.youtube.com/embed/x9i6huGBmLI?si=-ZthmdhLiqUkgl3u"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p class="titulo-card">O FIM DE ONE PIECE E O SONHO DE LUFFY REVELADO! -O DESTINO FINAL DE CADA CHAPÉU
+                    DE PALHA | ONE PIECE</p>
+                <p class="autor-card">Jovem Otaku</p>
+            </div>
+            <div class="card">
+                <iframe width="450" height="315" src="https://www.youtube.com/embed/FvSYVU8cSXU?si=5bXsSJqdGMtEQfIg"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p class="titulo-card">Solo Leveling - 2ª Temporada / Episódio 01 em Português / SUNG JIN WOO ENCONTRA
+                    OS ELFOS DE GELO!</p>
+                <p class="autor-card">Mangás Online</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
